fixed some mobile responsiveness issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "paycheck_warrior",
-  "version": "0.1.0",
+  "name": "CryptoTracker",
+  "version": "1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
